--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-cayman
-title: "PHDBA 297T.4 Decentralized Finance"
-description: Spring 2021
+title: "Decentralized Finance"
+# description: Spring 2021
 show_downloads: false
 github:
   is_project_page: false
